# intent-recognizer

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md
doc/diagrams/: high-level.drawio  lib.drawio
include/intent_recognizer/: IRecognizer.hpp  RecognizerFactory.hpp
script/: requirements.txt  sentences.csv  train.py
src/lib/: CMakeLists.txt
src/lib/recognizer/: RecognizerFactory.cpp
src/lib/recognizer/advanced/: AdvancedRecognizer.cpp  AdvancedRecognizer.hpp
src/lib/recognizer/basic/: BasicRecognizer.cpp  BasicRecognizer.hpp
src/lib/test/: main.cpp
